k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportshop-web
  namespace: sportshop
spec:
  selector:
    app: sportshop-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
